linked signature and avatar image onto same compnent for manipulation, changed card border on portfolio and resized cards, added padding to ffoter to fix visibility issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 :root {
   --bgColor: #108194;
-  --textColor: #d8d8d8;
+  --textColor: #e7e5e5;
   --linkHoverColor: #E19627;
 }
 
@@ -25,10 +25,13 @@ body{
 
 .card{
   background-color: var(--bgColor);
-  height: 21rem;
-  width: 25rem;
-  justify-content: center;
-  border: 2px, solid, var(--textColor);
+  height: 20rem;
+  width: 20rem;
+  align-content: center;
+}
+
+.card:hover{
+  border-color: var(--textColor);
 }
 
 .card-body{
@@ -69,14 +72,15 @@ textarea{
 }
 
 .footer{
-  position: relative;
-  bottom: 60;
+  position: absolute;
   width: 100%;
   height: 20px;
   line-height: 20px;
 }
 
 .footer-list{
+  padding-bottom: 25px;
+  padding-top: 25px;
   width: 90%;
   list-style: none;
   text-decoration: underline;
